Solved issues with social media icon alignments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,7 +117,7 @@ body{
 
 #footer-content{
   margin: 0 auto;
-  width: 80%;
+  width: 85%;
 }
 
 
@@ -202,7 +202,7 @@ body{
 
    }
    #copyright{
-     margin-left: 35px;
+     margin-left: 45px;
    }
 }
 
